# rustamath_mnmz

./: Cargo.toml  README.md
src/: bracket.rs  brents_df_method.rs  brents_method.rs  golden_section.rs  lib.rs  simplex.rs
